IND First Condition Reworded

--- a/Manual/lyingIndicators.html
+++ b/Manual/lyingIndicators.html
@@ -145,7 +145,7 @@
                         <tr>
                             <td><strong>IND</strong>
 								<ul>
-									<li>I'm telling the truth, unless 1 of the 2 exist; RCA Stereo and DVI-D port.</li>
+									<li>I'm telling the truth, unless RCA Stereo or DVI-D ports exist, not both.</li>
 									<li>If there at least 3 unique port types; NSA, SIG, SND, and TRN are lying.</li>
 								</ul>
 							</td>
